[package]
name = "andersonpgrep"
version = "0.1.0"
edition = "2021"
description = "a tool to grep lines from a file"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1
# the default value is 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
